[gd_scene load_steps=12 format=2]

[ext_resource path="res://Actors/Menu/StatButtonSystem.gd" type="Script" id=1]
[ext_resource path="res://StatPointsSystem.gd" type="Script" id=5]
[ext_resource path="res://fonts/menu.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.784314, 0.156863, 0.156863, 1 )
border_width_bottom = 10
border_color = Color( 0.321569, 0.0627451, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 10
border_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.862745, 0.54902, 0.117647, 1 )
border_width_bottom = 10
border_color = Color( 0.360784, 0.231373, 0.0509804, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.823529, 0.823529, 0.117647, 1 )
border_width_bottom = 10
border_color = Color( 0.321569, 0.321569, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.27451, 0.823529, 0.156863, 1 )
border_width_bottom = 10
border_color = Color( 0.109804, 0.321569, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.54902, 0.235294, 0.666667, 1 )
border_width_bottom = 10
border_color = Color( 0.34902, 0.145098, 0.419608, 1 )

[node name="PointsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 944.0
margin_bottom = 40.0
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Customize Your Character"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 944.0
margin_bottom = 64.0
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "you have 8 points to use"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 452.0
alignment = 1

[node name="LifeStatMenu" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 12.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 50 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/LifeStatMenu"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer/LifeStatMenu"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/LifeStatMenu/ProgressBar"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/LifeStatMenu/ProgressBar/Plus"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/LifeStatMenu/ProgressBar/Plus/Label"]
margin_left = 50.0
margin_right = 130.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Life"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeStatBarMenu" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 12.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 50 )
action_mode = 0
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SizeStatBarMenu"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer/SizeStatBarMenu"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/SizeStatBarMenu/ProgressBar"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SizeStatBarMenu/ProgressBar/Plus"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SizeStatBarMenu/ProgressBar/Plus/Label"]
margin_left = 50.0
margin_right = 130.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackSTatBarMenu" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 12.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 50 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/AttackSTatBarMenu"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer/AttackSTatBarMenu"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/AttackSTatBarMenu/ProgressBar"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/AttackSTatBarMenu/ProgressBar/Plus"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/AttackSTatBarMenu/ProgressBar/Plus/Label"]
margin_left = 50.0
margin_right = 130.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Strength"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedSTatBarMenu" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 255.0
margin_right = 12.0
margin_bottom = 305.0
rect_min_size = Vector2( 0, 50 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SpeedSTatBarMenu"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer/SpeedSTatBarMenu"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/SpeedSTatBarMenu/ProgressBar"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SpeedSTatBarMenu/ProgressBar/Plus"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SpeedSTatBarMenu/ProgressBar/Plus/Label"]
margin_left = 50.0
margin_right = 130.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Special" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 309.0
margin_right = 12.0
margin_bottom = 359.0
rect_min_size = Vector2( 0, 50 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Special"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer/Special"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Special/ProgressBar"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Special/ProgressBar/Plus"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Special/ProgressBar/Plus/Label"]
margin_left = 50.0
margin_right = 130.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Special"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 452.0
alignment = 2

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 432.0
margin_right = 12.0
margin_bottom = 452.0
size_flags_horizontal = 13
size_flags_vertical = 13
flat = true
align = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Next"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Next" to="." method="_on_Next_pressed"]
